@@ -292,7 +292,9 @@ public class CassandraStore<K, T extends PersistentBase> extends DataStoreBase<K
       throws IOException {
     // just a single partition
     List<PartitionQuery<K,T>> partitions = new ArrayList<PartitionQuery<K,T>>();
-    partitions.add(new PartitionQueryImpl<K,T>(query));
+    PartitionQueryImpl<K, T> pqi = new PartitionQueryImpl<K, T>(query);
+    pqi.setConf(getConf());
+    partitions.add(pqi);
     return partitions;
   }
   
