@@ -120,14 +120,13 @@ public class WebPageDataCreator {
         page = WebPage.newBuilder().build();
         page.setUrl(new Utf8(URLS[i]));
         page.setParsedContent(new ArrayList<CharSequence>());
-	    if (CONTENTS[i]!=null){
-		    page.setContent(ByteBuffer.wrap(CONTENTS[i].getBytes()));
-		    for(String token : CONTENTS[i].split(" ")) {
-		      page.getParsedContent().add(new Utf8(token));  
-		    }
-	    }
-        
         page.setOutlinks(new HashMap<CharSequence, CharSequence>());
+        if (CONTENTS[i]!=null){
+          page.setContent(ByteBuffer.wrap(CONTENTS[i].getBytes()));
+          for(String token : CONTENTS[i].split(" ")) {
+            page.getParsedContent().add(new Utf8(token));  
+          }
+        }
         for(int j=0; j<LINKS[i].length; j++) {
           page.getOutlinks().put(new Utf8(URLS[LINKS[i][j]]), new Utf8(ANCHORS[i][j]));
         }
